@@ -1,3 +1,4 @@
+[2018-06-09 16:48:52 +0200]  Added missing dialogs (still wip)                                          karasu      {5fb69b13}
 [2018-06-09 01:43:03 +0200]  Remove unused code                                                         karasu      {d15e54f8}
 [2018-06-09 01:40:39 +0200]  Fixed translations in create/edit partition dialog                         karasu      {c326a178}
 [2018-06-09 01:13:34 +0200]  Fixes cache page bug                                                       karasu      {dddc1a45}
